--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script defer src="./main.js"></script>
 </head>
 <body>
-  <div id="hello" class="hello" style="color: orange;">Hello world!</div>
+  <div id="hello" class="hello" style="color: #1233fd;">Hello world!</div>
   
 </body>
 </html>
